<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_bt_py_interfaces</name>
  <version>0.9.0</version>
  <description>ROS 2 interface definitions for ros_bt_py.</description>
  <maintainer email="oberacker@fzi.de">David Oberacker</maintainer>
  <license>BSD-3-Clause</license>
  <author email="spielbauer@fzi.de">Niklas Spielbauer</author>
  <author email="exner@fzi.de">Felix Exner</author>
  <author email="schnell@fzi.de">Tristan Schnell</author>
  <author email="heppner@fzi.de">Georg Heppner</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
