<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_bt_py_web_gui</name>
  <version>4.0.1</version>
  <description>Web-based GUI for the ros-bt-py behavior tree library.</description>
  <maintainer email="oberacker@fzi.de">David Oberacker</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>python3-netifaces</depend>

  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_bt_py_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
